fixing header scroll on mobile version

--- a/src/styleSheet/index/index.scss
+++ b/src/styleSheet/index/index.scss
@@ -1,5 +1,9 @@
 body {
     margin: 0;
     font-family: 'Montserrat';
-    // height: 100vh;
+}
+
+body.no-scroll {
+    overflow: hidden;
+    touch-action: none;
 }
